--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </nav><div class="div2 u-container-style u-group u-shape-rectangle u-group-1">
         <div class="u-container-layout u-valign-middle">
           <a href="Home.html" data-page-id="2780469" class="u-align-left u-image u-logo u-opacity u-opacity-95 u-image-1" data-image-width="1920" data-image-height="1080" title="Home">
-            <img src="logo-24.png" class="u-logo-image u-logo-image-1">
+            <img src="logo-24.png" class="u-logo-image u-logo-image-1" alt="ANUR3 Logo">
           </a>
         </div>
       </div></header>
